optimizations for the onboarding process